--- a/css/styles.css
+++ b/css/styles.css
@@ -1,44 +1,163 @@
-#title{
-  background-color: #ff4c68;
-  color:#fff;
-}
-
-body{
+body {
   font-family: 'Montserrat-thin', sans-serif;
 }
 
-.container-fluid{
-  padding: 2% 15%;
-}
-h1{
-  margin : 3rem 0 0 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size:3.5rem;
-  line-height: 1.5;
-}
-.navbar{
+/* Navigation Bar */
+.navbar {
   padding-bottom: 4.5rem;
 }
-.navbar-brand{
+
+.navbar-brand {
   font-family: 'Ubuntu';
   font-size: 2.5rem;
 }
 
-.nav-item{
-  padding : 0 18px 0 18px;
+.nav-item {
+  padding: 0 18px 0 18px;
 }
 
-.nav-link{
+.nav-link {
   font-family: 'Montserrat-light', sans-serif;
-  font-size:1.2rem;
+  font-size: 1.2rem;
 }
-.download-btn{
+
+/* Title Section */
+#title {
+  background-color: #ff4c68;
+  color: #fff;
+  padding: 2% 15% 7% 15%;
+}
+
+h1 {
+  margin: 3rem 0 0 0;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.download-btn {
   margin: 5% 3% 5% 0;
 }
-.img-class{
-  text-align: center;
+
+.bruno-img {
+  width: 20rem;
+  transform: rotate(15deg);
+  position: absolute;
+  right: 23%;
 }
-.bruno-img{
-  width : 60%;
-  transform: rotate(10deg);
+
+/* Media query for tablet and mobile */
+@media (max-width:1024px) {
+  #title {
+    text-align: center;
+  }
+
+  .bruno-img {
+    position: static;
+    transform: rotate(0);
+  }
+}
+
+/* Features Section */
+#features {
+  text-align: center;
+  padding: 7% 15%;
+  position: relative;
+  z-index: 1;
+  background-color: #fff;
+}
+
+h3 {
+  font-family: 'Montserrat', sans-serif;
+  color: #000;
+  font-size: 1.5rem;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+.icon {
+  font-size: 3rem;
+  color: #ef8172;
+  margin: 20px 5px;
+}
+
+.icon:hover {
+  color: #ff4c68;
+}
+
+.feature-item {
+  padding: 5%;
+}
+
+/* Testimonials Section */
+#testimonials {
+  background-color: #ef8172;
+  text-align: center;
+  color: #fff;
+}
+
+.carousel-item {
+  padding: 7% 15%;
+}
+
+h2 {
+  font-family: 'Montserrat', sans-serif;
+  font-size: 2.8rem;
+  line-height: 1.5;
+}
+
+.testionial-img {
+  border-radius: 100%;
+  width: 10%;
+  height: 10%;
+  padding: 5px;
+}
+
+/* Press section */
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 5%;
+}
+
+.press-logo {
+  width: 12%;
+  margin: 20px 40px;
+}
+
+/* Pricing Section */
+#pricing {
+  text-align: center;
+  padding: 5%;
+}
+
+.pricing-card {
+  padding: 3%;
+}
+
+/* Call for action section */
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.cta-text {
+  color: #fff;
+  font-size: 2.8rem;
+  line-height: 1.5;
+}
+
+/* Footer Section */
+#footer {
+  text-align: center;
+  padding: 5% 15%;
+  color: #fff;
+}
+
+.footer-icon{
+  font-size:1.2rem;
+  padding: 2%;
 }
