--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,42 @@
 body {
   font-family: 'Montserrat-thin', sans-serif;
+  text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+p {
+  color: #8f8f8f;
+}
+
+/* Container */
+.container-fluid {
+  padding: 7% 15%;
+}
+
+/* Sections */
+.color-section {
+  background-color: #ff4c68;
+  color: #fff;
+}
+
+.white-section {
+  background-color: #fff;
+}
+
+/* Headings */
+.big-heading {
+  color: #fff;
+  margin: 3rem 0 0 0;
+  font-size: 3.5rem;
+  line-height: 1.5;
+}
+
+.section-heading {
+  font-size: 2.8rem;
+  line-height: 1.5;
 }
 
 /* Navigation Bar */
@@ -22,17 +59,9 @@ body {
 }
 
 /* Title Section */
-#title {
-  background-color: #ff4c68;
-  color: #fff;
-  padding: 2% 15% 7% 15%;
-}
-
-h1 {
-  margin: 3rem 0 0 0;
-  font-family: 'Montserrat', sans-serif;
-  font-size: 3.5rem;
-  line-height: 1.5;
+#title .container-fluid {
+  padding: 2% 15% 7%;
+  text-align: left;
 }
 
 .download-btn {
@@ -60,21 +89,8 @@ h1 {
 
 /* Features Section */
 #features {
-  text-align: center;
-  padding: 7% 15%;
   position: relative;
   z-index: 1;
-  background-color: #fff;
-}
-
-h3 {
-  font-family: 'Montserrat', sans-serif;
-  color: #000;
-  font-size: 1.5rem;
-}
-
-p {
-  color: #8f8f8f;
 }
 
 .icon {
@@ -91,19 +107,16 @@ p {
   padding: 5%;
 }
 
+.feature-head {
+  font-size: 1.5rem;
+}
+
 /* Testimonials Section */
 #testimonials {
   background-color: #ef8172;
-  text-align: center;
-  color: #fff;
 }
 
-.carousel-item {
-  padding: 7% 15%;
-}
-
-h2 {
-  font-family: 'Montserrat', sans-serif;
+.testimonial-text {
   font-size: 2.8rem;
   line-height: 1.5;
 }
@@ -111,14 +124,12 @@ h2 {
 .testionial-img {
   border-radius: 100%;
   width: 10%;
-  height: 10%;
   padding: 5px;
 }
 
 /* Press section */
 #press {
   background-color: #ef8172;
-  text-align: center;
   padding-bottom: 5%;
 }
 
@@ -129,35 +140,24 @@ h2 {
 
 /* Pricing Section */
 #pricing {
-  text-align: center;
   padding: 5%;
+}
+
+.pricing-text {
+  font-size: 2.8rem;
+  line-height: 1.5;
 }
 
 .pricing-card {
   padding: 3%;
 }
 
-/* Call for action section */
-#cta {
-  background-color: #ff4c68;
-  text-align: center;
-  padding: 7% 15%;
-}
-
-.cta-text {
-  color: #fff;
-  font-size: 2.8rem;
-  line-height: 1.5;
+.package {
+  font-size: 1.5rem;
 }
 
 /* Footer Section */
-#footer {
-  text-align: center;
-  padding: 5% 15%;
-  color: #fff;
-}
-
-.footer-icon{
-  font-size:1.2rem;
+.footer-icon {
+  font-size: 1.2rem;
   padding: 2%;
 }
